--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,36 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_todo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_todo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ToDOApp"
+        android:theme="@style/Theme.ToDOApp.NoActionbar"
         tools:targetApi="31">
+<activity android:name=".activity.UpdateActivity" android:exported="false">
+
+    <meta-data
+        android:name="android.app.lib_name"
+        android:value="" />
+</activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".activity.AddTaskActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SplashActivity"
-            android:exported="true">
+            android:name=".activity.HomeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activity.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ToDOApp.NoActionbar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
